# fastapi-template

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  alembic.ini  pyproject.toml  ruff.toml
_docs/: celery.md  containerization.md  lint-formatting.md  mailing.md  task_scheduler.md  testing.md
alembic/: env.py
alembic/versions/: 0ab43e474275_initial_project.py
app/: celery.py  cli.py  main.py  taskiq.py
app/api/: __init__.py  health.py  root_index.py  router.py
app/api/v1/: __init__.py  task_schedule_sample.py  user.py
app/config/: __init__.py  authorization.py  cors.py  scheduler.py
app/database/: __init__.py  database.py
app/lib/: database.py
app/lib/tskq/: __init__.py  redis_schedule_source.py  task_invoker.py  taskiq_broker.py
app/middleware/: authorization_middleware.py
app/models/: __init__.py  users.py
app/schemas/: user_schema.py
app/serializers/: __init__.py  user_serializer.py
app/services/: scheduler_service.py  user_service.py
app/sql_files/users/: fetch-single-user.sql
app/tasks/: my_schedule_task.py  my_task.py
app/templates/: user.html
app/templates/mails/: welcome_email.html
app/tests/: conftest.py
app/tests/factories/: user_factory.py
app/tests/fixtures/: common.py
app/tests/integration/: test_health.py  test_user.py
app/tests/unit/: test_user_services.py  test_users_models.py
app/utils/: base.py  exceptions.py  global_exception_handler.py  logger.py  paginate.py  validation.py
app/utils/mailer/: inline_css.py  mail_templating.py
app/utils/tskq/: redis_schedule_source.py  task_invoker.py  taskiq_helper.py
docker/config/nginx/: app.conf
docker/config/supervisor/: supervisord.conf
docker/dockerfiles/: app.Dockerfile
scripts/: deploy.sh  docker_image_build.sh  format.sh  lint.sh  taskiq-scheduler.sh  taskiq-worker.sh  test.sh
(+1 files in other folders)
