[project]
name = "fastapi-template"
version = "1.0.0"
description = "A comprehensive FastAPI project template with user management, authentication, email functionality, database migrations, async task processing with Celery, and production-ready features including Docker support, testing, and comprehensive documentation."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "alembic>=1.14.0",
    "celery>=5.4.0",
    "celery-redbeat>=0.13.0",
    "redis>=5.2.1",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.5",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "fastapi-pundra==0.0.19",
    "fastapi-mail>=1.4.1",
    "loguru>=0.7.3",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.20",
    "beautifulsoup4>=4.12.0",
    "premailer>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.1",
    "faker>=33.3.0",
    "httpx>=0.28.1",
    "ruff>=0.9.1",
    "pre-commit>=3.8.0",
]

[project.scripts]
start-server = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
